LPS-117579 Fix arrow-body alignment

--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-web/src/main/resources/META-INF/resources/css/EditApp.scss
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-web/src/main/resources/META-INF/resources/css/EditApp.scss
@@ -50,7 +50,7 @@ $navbarHeight: 120px;
 			}
 
 			.arrow-body {
-				align-items: flex-start;
+				align-items: end;
 				display: flex;
 				flex-flow: wrap-reverse;
 				justify-content: center;
